feat: add support for refresh=1 parameter in local cache
